--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,10 @@ header h1 {
   display: flex;
   justify-content: center;
 }
+
+.response {
+  font-size: large;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
