add thing button will add an input line

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ header h1 {
 }
 
 .response {
-  font-size: large;
+  font-size: larger;
   display: flex;
   justify-content: center;
   margin-top: 10px;
