--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,8 @@ header h1 {
   margin-top: 10px;
 }
 
-.width30 {
-  width: 30% !important;
+#thing-input {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
 }
